--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
     </div>
     <input type="text" placeholder="Ваше ім'я?" id="name-input" />
     <h1>Привіт, <span id="name-output">незнайомець</span>!</h1>
--->
+
 
     <input
       type="text"
       id="validation-input"
       data-length="6"
       placeholder="Введи 6 символів"
-    />
-    <script src="./js3/script.js"></script>
+    />-->
+    <input type="range" id="font-size-control" min="10" max="40" step="1" value="16">
+    <span id="text">Sample Text
+    <script src="./js5/script.js"></script>
   </body>
 </html>
