--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!--    <button class="button" data-action="open-modal">Відкрити модалку</button>
+   <!-- <button class="button" data-action="open-modal">Відкрити модалку</button>
 
        
     <div class="backdrop js-backdrop">
            
       <div class="modal">
-      т, н
+
         <h2>Modal window</h2>
                
         <p>
@@ -29,24 +29,24 @@
         </p>
                
         <button type="button" class="button-close" data-action="close-modal">
-                    Закрити        
+            Закрити 
         </button>
              
       </div>
          
-    </div>
-    <input type="text" placeholder="Ваше ім'я?" id="name-input" />
-    <h1>Привіт, <span id="name-output">незнайомець</span>!</h1>
+    </div> -->
+    <!-- <input type="text" placeholder="Ваше ім'я?" id="name-input" />
+    <h1>Привіт, <span id="name-output">незнайомець</span>!</h1> -->
 
-
+<!--  
     <input
       type="text"
       id="validation-input"
       data-length="6"
       placeholder="Введи 6 символів"
     />-->
-    <input type="range" id="font-size-control" min="10" max="40" step="1" value="16">
-    <span id="text">Sample Text
+    <input type="range" id="font-size-control" >
+    <span id="text">Золото
     <script src="./js5/script.js"></script>
   </body>
 </html>
