--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
       data-length="6"
       placeholder="Введи 6 символів"
     />-->
-    <input type="range" id="font-size-control" >
-    <span id="text">Золото
+
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
     <script src="./js5/script.js"></script>
   </body>
 </html>
