--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
       placeholder="Введи 6 символів"
     />-->
 
-    <input id="font-size-control" type="range" />
+    <!-- <input id="font-size-control" type="range" />
     <br />
-    <span id="text">Абракадабра!</span>
-    <script src="./js5/script.js"></script>
+    <span id="text">Абракадабра!</span> -->
+    <!-- <input type="number" id="number1" placeholder="Enter first number">
+    <input type="number" id="number2" placeholder="Enter second number">
+    <button onclick="checkSum()">Перевірти суму</button>
+    <p id="resultat"></p> -->
+    <input type="text" id="Input" placeholder="Введіть текст">
+    <button onclick="checkText()">Перевірити</button>
+    <script src="./js8/script.js"></script>
   </body>
 </html>
