--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-   <!-- <button class="button" data-action="open-modal">Відкрити модалку</button>
+    <!-- <button class="button" data-action="open-modal">Відкрити модалку</button>
 
        
     <div class="backdrop js-backdrop">
@@ -38,7 +38,7 @@
     <!-- <input type="text" placeholder="Ваше ім'я?" id="name-input" />
     <h1>Привіт, <span id="name-output">незнайомець</span>!</h1> -->
 
-<!--  
+    <!--  
     <input
       type="text"
       id="validation-input"
@@ -53,8 +53,28 @@
     <input type="number" id="number2" placeholder="Enter second number">
     <button onclick="checkSum()">Перевірти суму</button>
     <p id="resultat"></p> -->
-    <input type="text" id="Input" placeholder="Введіть текст">
-    <button onclick="checkText()">Перевірити</button>
-    <script src="./js8/script.js"></script>
+    <!-- <input type="text" id="Input" placeholder="Введіть текст">
+    <button onclick="checkText()">Перевірити</button> -->
+    <!-- <form id="form">
+      <label for="name">Name</label><br />
+      <input type="text" id="name" name="name" required /><br />
+      <label for="email">Email</label><br />
+      <input type="email" id="email" name="email" required /><br />
+      <label for="password">Password</label><br />
+      <input
+        type="password"
+        id="password"
+        name="password"
+        required
+      /><br /><br />
+      <button type="button" onclick="validateForm()">Перевірити</button>
+    </form> -->
+    <form id="numberForm">
+      <label for="Input">Веди число</label>
+      <input type="number" id="Input" name="Input" required>
+      <button type="button" onclick="checkNumber()">Check Number</button>
+    </form>
+    <p id="resultat"></p>
+    <script src="./js10/script.js"></script>
   </body>
 </html>
