--- a/index.html
+++ b/index.html
@@ -69,12 +69,32 @@
       /><br /><br />
       <button type="button" onclick="validateForm()">Перевірити</button>
     </form> -->
-    <form id="numberForm">
+    <!-- <form id="numberForm">
       <label for="Input">Веди число</label>
       <input type="number" id="Input" name="Input" required>
       <button type="button" onclick="checkNumber()">Check Number</button>
     </form>
-    <p id="resultat"></p>
-    <script src="./js10/script.js"></script>
+    <p id="resultat"></p> -->
+
+    <!-- <form>
+      <label for="beverageSelect">Вибиріть напій:</label>
+      <select id="beverageSelect" onchange="showMessage()">
+        <option value="coffee">Кава</option>
+        <option value="tea">Чай</option>
+        <option value="juice">Сік</option>
+      </select>
+    </form>
+    <div id="message"></div> -->
+    <!-- <input type="text" id="day" placeholder="Ведіть день тижня">
+  <button onclick="checkDay()">Перевірити</button>
+  
+  <p id="result"></p> -->
+
+  <label for="month">Enter month number (1-12):</label>
+  <input type="number" id="month" min="1" max="12">
+  <button onclick="checkSeason()">Check Season</button>
+  <p id="output"></p>
+
+    <script src="./js11/script.js"></script>
   </body>
 </html>
