--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <button onclick="checkColor()">Check Action</button>
     <p id="Message"></p> -->
 
-    <h2>Калькулятор</h2>
+    <!-- <h2>Калькулятор</h2>
     <form id="calculatorForm">
       <label for="number1">Виберіть 1 число:</label>
       <input type="number" id="number1" name="number1" required />
@@ -130,7 +130,7 @@
       <button type="button" onclick="calculate()">Порахувати</button>
     </form>
 
-    <p id="result"></p>
-    <script src="./js11/script.js"></script>
+    <p id="result"></p> -->
+    <script src="./js12/script.js"></script>
   </body>
 </html>
