--- a/index.html
+++ b/index.html
@@ -131,6 +131,27 @@
     </form>
 
     <p id="result"></p> -->
-    <script src="./js15/script.js"></script>
+
+
+
+
+
+
+
+<!--1-->
+      <!-- <button id="button">Натисне на мене</button> -->
+
+
+      <!--2-->
+      <!-- <p>Вгадайте число від 1 до 100:</p>
+      <input type="text" id="guessField">
+      <button tipe="button" onlick="checkGuess()">Перевірити</button>
+      <p id="guessREsult"></p> -->
+
+            <!--3-->
+            <!-- <h1>Click Counter</h1>
+            <p>Клікніть: <span id="clickCount">0</p> -->
+    <script src="./js16/script.js"></script>
   </body>
 </html>
+  
