--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
             <!--3-->
             <!-- <h1>Click Counter</h1>
             <p>Клікніть: <span id="clickCount">0</p> -->
-              <div id="title"></div>
+              <!-- <div id="title"></div>
               <div id="director"></div>
               <div id="year"></div>
-              <div id="rating"></div>
-    <script src="./js17/script.js"></script>
+              <div id="rating"></div> -->
+    <script src="./js18/script.js"></script>
   </body>
 </html>
   
